--- a/index.html
+++ b/index.html
@@ -55,30 +55,41 @@
             <div class="info">
                 <div class="addition" id="mision">
                     <h2>MISION</h2>
-                    <p>Brindar un servicio educativo para la población con síndrome de Down y 
-                        autismo, a fin de estimular su desarrollo personal y desempeño en las tareas cotidianas, 
+                    <p>Brindar un servicio educativo para la población con síndrome de Down y
+                        autismo, a fin de estimular su desarrollo personal y desempeño en las tareas cotidianas,
                         para que puedan mejorar la forma de enfrentar la vida.
                     </p>
                 </div>
                 <div class="addition" id="vision">
                     <h2>VISION</h2>
                     <p>Para el año 2026 ser un referente a nivel regional en el servicio expandiéndolo a más lugares
-                         del departamento y del país.</p>
+                        del departamento y del país.</p>
                 </div>
             </div>
             <div id="media">
                 <div id="mediaUp">
                     <img src="./src/IMG/Proj/kids.png" alt="" id="mediaIMG">
                     <div class="addition">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste est deleniti vitae! Excepturi,
-                            sunt doloribus quaerat soluta libero veritatis corrupti. Maxime pariatur fugit magni nihil
-                            at atque, voluptatum architecto cupiditate?</p>
+                        <p>En RettDown, entendemos la importancia de abordar afecciones como el Síndrome
+                            de Down y el Autismo, que afectan a niños y a la población en general. Nuestra página web
+                            está diseñada con el propósito de ser una fuente valiosa de apoyo para mejorar la calidad de
+                            estudio de los niños, al mismo tiempo que potencia su capacidad motriz e intelectual.</p>
                     </div>
                 </div>
                 <div id="mediaDown">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam dolorem et laboriosam id libero
-                        sint harum quibusdam iste, voluptate molestias? Beatae ullam illo veniam impedit, quisquam odit
-                        architecto accusantium fuga.</p>
+                    <p>Nos enorgullece ofrecer una amplia gama de métodos de aprendizaje
+                        creativos, caseros y virtuales. Estos recursos han sido cuidadosamente desarrollados para
+                        ayudarte a fortalecer tu capacidad motriz, capacidad intelectual y mucho más. Estamos
+                        comprometidos a estar a tu lado en cada paso del camino, brindándote el apoyo que necesitas para
+                        alcanzar tus objetivos.
+
+                        Siendo un vital objetivo para nosotros proporcionar a las familias, cuidadores y educadores
+                        herramientas efectivas y
+                        recursos de calidad para promover el desarrollo de los niños. Estamos aquí para ayudarte a
+                        construir un futuro brillante y lleno de posibilidades. No dudes en explorar nuestro sitio y
+                        contar con nosotros para cualquier necesidad que tengas. Tu bienestar
+                        y el de tus seres queridos es nuestra prioridad.
+                    </p>
                     <div class="addition" id="mediaPart">
                         <iframe width="560" height="315"
                             src="https://www.youtube.com/embed/wSaGbYXlPt8?si=S8KKnY9QCVHcVb2R"
@@ -90,14 +101,51 @@
                         </audio>
                     </div>
                     <div class="addition" id="games">
-                        <p>Estos juegos son los que ayudarán a mejorar los métodos de Aprendizaje de los 
-                            niños con Síndrome de Down y Autismo, enfocado en la actividad motriz y las 
-                            recompensas por jugar dichos juegos.</p>
-                            <ul>
-                                <li><img src="./src/IMG/Utilities/Game1.jpg" alt=""></li>
-                                <li><img src="./src/IMG/Utilities/Game2.jpg" alt=""></li>
-                                <li><img src="./src/IMG/Utilities/Game3.jpg" alt=""></li>
-                            </ul>
+                        <p>Nuestra amplia selección de juegos ha sido especialmente diseñada para contribuir
+                            significativamente a la mejora de los métodos de aprendizaje de niños que enfrentan desafíos
+                            relacionados con el Síndrome de Down y el Autismo. Estos juegos se centran en la
+                            estimulación de la actividad motriz y ofrecen recompensas que hacen que el proceso de
+                            aprendizaje sea aún más atractivo y efectivo para estos niños. <br><br>
+                        </p>
+                        <ul>
+                            <li><img src="./src/IMG/Utilities/Game1.jpg" alt=""></li>
+                            <li><img src="./src/IMG/Utilities/Game2.jpg" alt=""></li>
+                            <li><img src="./src/IMG/Utilities/Game3.jpg" alt=""></li>
+                        </ul>
+                        <p>
+                            Comprendemos la importancia de abordar de manera específica las necesidades educativas de
+                            estos pequeños, y es por eso que hemos creado una colección de juegos diseñados para
+                            potenciar sus habilidades de una manera divertida y enriquecedora.
+                        </p>
+                    </div>
+
+                    <div class="addition" id="online">
+                        <p>
+                            En un mundo cada vez más digital y conectado, la educación y el aprendizaje han
+                            evolucionado de maneras emocionantes. Hoy, estamos encantados de presentarte una experiencia
+                            educativa única y estimulante: nuestros juegos didácticos en línea. Estos juegos representan
+                            una nueva era en el proceso de aprendizaje, fusionando la diversión y la educación de una
+                            manera sin precedentes.
+
+                            Nuestra plataforma ofrece una selección diversa de juegos diseñados para cualquier cliente
+                            por
+                            igual, con enfoques en materias específicas. Estos juegos son mucho más que simples
+                            pasatiempos; son herramientas poderosas que fomentan el
+                            la resolución de problemas y el desarrollo de habilidades clave, todo
+                            mientras se disfruta de una experiencia interactiva y entretenida.
+
+                            Únete a nosotros mientras exploramos esta emocionante dimensión educativa, donde
+                            aprender se convierte en un viaje apasionante.
+                        </p>
+
+                        <iframe style="max-width:100%"
+                            src="https://wordwall.net/es/embed/a1b2e54d845e4fc99b64abb59f93c609?themeId=1&templateId=5&fontStackId=0"
+                            width="500" height="380" frameborder="0" allowfullscreen>
+                        </iframe>
+                        <iframe style="max-width:100%"
+                            src="https://wordwall.net/es/embed/ad38b09e415e49adb430c81830992603?themeId=1&templateId=46&fontStackId=0"
+                            width="500" height="380" frameborder="0" allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </div>
