--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     </div>
 
                     <div class="addition" id="online">
+                        <h2>MUESTRA VIRTUAL</h2>
                         <p>
                             En un mundo cada vez más digital y conectado, la educación y el aprendizaje han
                             evolucionado de maneras emocionantes. Hoy, estamos encantados de presentarte una experiencia
